@@ -10,6 +10,9 @@ Format:
 - Removed/deprecated feature/method .... (user visible removed feature - passed on to release notes)
 . Any other notes .... 				     (internal changes)
 
+2013-11-07 (Kenneth Geisshirt)
+. Initiating a library of common shell script functions.
+
 2013-10-10 (Kenneth Geisshirt)
 . Adding INTERACTIVE mode for the dist-config target in build.sh
 
